@@ -1,3 +1,8 @@
+2006-07-20  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/guniprop.c (real_toupper, real_tolower): Small optimization.
+	(#348011, Nicolai Weibull)
+
 2006-07-19  Behdad Esfahbod  <behdad@gnome.org>
 
 	* glib/gunibreak.h:
